--- a/index.html
+++ b/index.html
@@ -5,17 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock paper scissors tutorial </title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-<h2>Computer Choice: <span id="computer-choice"></span></h2>
-<h2>Your Choice: <span id="user-choice"></span></h2>
-<h2>Result: <span id="result"></span></h2>
+    <header class="pb-5 text-center">
+        <h1>Jogo da velha</h1>
+    </header>
+<div class="container">
+    <div class="row">
+        <div class="col"><h2>Escolha da máquina: <span id="computer-choice"></span></h2></div>
+        <div class="col"><h2>Sua escolha: <span id="user-choice"></span></h2></div>
+    </div>
+
+    <div class="row pt-5">
+        <div class="col text-center">
+            <p class="fs-1">Faça sua escolha abaixo:</p>
+        </div>
+    </div>
+
+    <div class="row pb-5 ">
+        <div class="col-5 text-end"><button id="rock" class="px-5">rock</button></div>
+        <div class="col-2"><button id="paper" class="px-5">paper</button></div>
+        <div class="col-5 text-start"><button id="scissors" class="px-5">scissors</button></div>
+    </div>
+
+    <div class="row py-5">
+        <div class="col">
+            <h2>Resultado: <span id="result"></span></h2>
+        </div>
+    </div>
 
 
-<button id="rock">rock</button>
-<button id="paper">paper</button>
-<button id="scissors">scissors</button>
-
+</div>
     <script src="app.js" charset="UTF-8"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
