deixei a pagina mais apresentavel

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header class="pb-5 text-center">
-        <h1>Jogo da velha</h1>
+        <h1 class="border border-dark p-3 bg-warning">Jogo da velha</h1>
     </header>
 <div class="container">
-    <div class="row">
-        <div class="col"><h2>Escolha da máquina: <span id="computer-choice"></span></h2></div>
-        <div class="col"><h2>Sua escolha: <span id="user-choice"></span></h2></div>
+    <div class="row ">
+        <div class="col"><h2>Escolha da máquina: <span class="text-info" id="computer-choice"></span></h2></div>
+        <div class="col"><h2>Sua escolha: <span class="text-info" id="user-choice"></span></h2></div>
     </div>
 
     <div class="row pt-5">
@@ -24,14 +24,14 @@
     </div>
 
     <div class="row pb-5 ">
-        <div class="col-5 text-end"><button id="rock" class="px-5">rock</button></div>
-        <div class="col-2"><button id="paper" class="px-5">paper</button></div>
-        <div class="col-5 text-start"><button id="scissors" class="px-5">scissors</button></div>
+        <div class="col-5 text-end"><button id="Pedra" class="px-5">Pedra</button></div>
+        <div class="col-2"><button id="Papel" class="px-5">Papel</button></div>
+        <div class="col-5 text-start"><button id="Tesoura" class="px-5">Tesoura</button></div>
     </div>
 
     <div class="row py-5">
-        <div class="col">
-            <h2>Resultado: <span id="result"></span></h2>
+        <div class="col bg-dark text-center">
+            <h2 class="text-white">Resultado: <span id="result"></span></h2>
         </div>
     </div>
 
