--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="container">
     <div class="row ">
         <div class="col"><h2>Escolha da máquina: <span class="text-info" id="computer-choice"></span></h2></div>
-        <div class="col"><h2>Sua escolha: <span class="text-info" id="user-choice"></span></h2></div>
+        <div class="col text-end"><h2>Sua escolha: <span class="text-info" id="user-choice"></span></h2></div>
     </div>
 
     <div class="row pt-5">
