jogo da memória finalizado

--- a/jogodamemoria.html
+++ b/jogodamemoria.html
@@ -9,11 +9,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>  
-<h3>
-    "Score: "
-    <span id="result"></span>
+    <header class="">
+        <h1 class="text-center bg-info border border-black pb-2">Jogo da Memória</h1>
+    </header>
+<h3 class="text-center " >
+    <span id="pontuacao">Pontuação:</span>
+    <span id="result"></span> 
 </h3>
-<div class="" id="grid"></div>
+<div class="row ">
+    <div class="col-3">
+    </div>
+    <div class="col-6 ms-5 ">
+        <div id="grid"></div>
+    </div>
+    <div class="col-3"></div>
+</div>
+
     <script src="memoria.js" charset="UTF-8"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
