substitui o metodo textcontet do pontuacaodisplay pelo metodo remove() para corrigir bug

--- a/jogodamemoria.html
+++ b/jogodamemoria.html
@@ -12,12 +12,12 @@
     <header class="">
         <h1 class="text-center bg-info border border-black pb-2">Jogo da Memória</h1>
     </header>
-<h3 class="text-center " >
+<h3 class="text-center" >
     <span id="pontuacao">Pontuação:</span>
     <span id="result"></span> 
 </h3>
 <div class="row ">
-    <div class="col-3">
+    <div class="col-3 ms-5">
     </div>
     <div class="col-6 ms-5 ">
         <div id="grid"></div>
